--- a/build.gradle
+++ b/build.gradle
@@ -15,11 +15,16 @@ allprojects {
 }
 
 subprojects {
+
     apply plugin: 'java'
     apply plugin: 'org.springframework.boot'
     apply plugin: 'io.spring.dependency-management'
 
     sourceCompatibility = '1.8'
+
+    dependencies {
+        implementation('com.google.guava:guava:29.0-jre')
+    }
 
     test {
         useJUnitPlatform()
