feature: add infra impl

--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,13 @@ subprojects {
     sourceCompatibility = '1.8'
 
     dependencies {
-        implementation('com.google.guava:guava:29.0-jre')
+        // Guava
+        implementation 'com.google.guava:guava:29.0-jre'
+        // Lombok
+        compileOnly 'org.projectlombok:lombok:1.18.12'
+        annotationProcessor 'org.projectlombok:lombok:1.18.12'
+        testCompileOnly 'org.projectlombok:lombok:1.18.12'
+        testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
     }
 
     test {
