--- a/d3-starter/src/main/resources/application.properties
+++ b/d3-starter/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+spring.application.name=D3Sample
+# Datasource
+spring.datasource.username=d3sample
+spring.datasource.password=rootpassword
+spring.datasource.url=jdbc:mysql://tx.devserver.net:3306/d3sample?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# MyBatis
+mybatis-plus.mapper-locations=classpath*:/mapper/*.xml
+mybatis-plus.global-config.banner=false
+# Logging
+logging.level.root=info
+logging.level."net.bytepowered.d3sample"=debug
+
+
 
