--- a/d3-infrastructure/build.gradle
+++ b/d3-infrastructure/build.gradle
@@ -6,8 +6,10 @@ group 'net.bytepowered'
 version '0.0.1-SNAPSHOT'
 
 dependencies {
+    // DB
     implementation 'mysql:mysql-connector-java:8.0.21'
-    implementation 'com.baomidou:mybatis-plus:3.4.0'
+    implementation 'com.baomidou:mybatis-plus-boot-starter:3.4.0'
     testImplementation 'com.baomidou:mybatis-plus-generator:3.4.0'
+    // Test
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
